-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.10.5
-
None
-
3
-
9223372036854775807
MDS Panic when handling remote object fails.
Steps to reproduce are as follows:
1) create/delete files and directorys under striped directory [client]# lfs mkdir -c 2 -i 0 /mnt/lustre/dir [client]# lfs mkdir -c 2 -i 0 -D /mnt/lustre/dir [client]# while :; do rm -rf /mnt/lustre/dir/*; ./mdtest -v -n 1000 -p 1 -i 3 -d /mnt/lustre/dir; done 2) simulate ENOSPC error at remote object handling (that is, out_tx_write_exec() function) [MDS1]# while :; do sysctl lnet.fail_loc=0x1704 ; sleep 3; sysctl lnet.fail_loc=0; sleep 5; done
{{}}
MDS console and dump:
{{}}
Message from syslogd@rx200-076 at May 10 20:08:27 ... kernel:LustreError: 20269:0:(osd_handler.c:3229:osd_destroy()) ASSERTION( osd_inode_unlinked(inode) || inode->i_nlink == 1 || inode->i_nlink == 2 ) failed: Message from syslogd@rx200-076 at May 10 20:08:27 ... kernel:LustreError: 20269:0:(osd_handler.c:3229:osd_destroy()) LBUG [9798957.173503] Call Trace: [9798957.190509] [<ffffffffb3b0d78e>] dump_stack+0x19/0x1b [9798957.223630] [<ffffffffb3b07a90>] panic+0xe8/0x21f [9798957.254673] [<ffffffffc0ad18cb>] lbug_with_loc+0x9b/0xa0 [libcfs] [9798957.294020] [<ffffffffc1133dd0>] osd_destroy+0x710/0x750 [osd_ldiskfs] [9798957.335950] [<ffffffffc1132bcd>] ? osd_ref_del+0x1ad/0x6a0 [osd_ldiskfs] [9798957.378897] [<ffffffffc1132141>] ? osd_attr_set+0x201/0xae0 [osd_ldiskfs] [9798957.422331] [<ffffffffb3b120d2>] ? down_write+0x12/0x3d [9798957.456457] [<ffffffffc0f6c851>] out_obj_destroy+0x101/0x2c0 [ptlrpc] [9798957.497826] [<ffffffffc0f6cac0>] out_tx_destroy_exec+0x20/0x190 [ptlrpc] [9798957.540746] [<ffffffffc0f67591>] out_tx_end+0xe1/0x5c0 [ptlrpc] [9798957.578950] [<ffffffffc0f6b6d3>] out_handle+0x1453/0x1bc0 [ptlrpc] [9798957.618701] [<ffffffffc0efbf72>] ? lustre_msg_get_opc+0x22/0xf0 [ptlrpc] [9798957.661558] [<ffffffffc0f5fc69>] ? tgt_request_preprocess.isra.26+0x299/0x790 [ptlrpc] [9798957.711684] [<ffffffffc0f6138a>] tgt_request_handle+0x92a/0x1370 [ptlrpc] [9798957.755032] [<ffffffffc0f09e4b>] ptlrpc_server_handle_request+0x23b/0xaa0 [ptlrpc] [9798957.803047] [<ffffffffc0f06478>] ? ptlrpc_wait_event+0x98/0x340 [ptlrpc] [9798957.845811] [<ffffffffb34cee92>] ? default_wake_function+0x12/0x20 [9798957.885436] [<ffffffffb34c4abb>] ? __wake_up_common+0x5b/0x90 [9798957.922487] [<ffffffffc0f0d592>] ptlrpc_main+0xa92/0x1e40 [ptlrpc] [9798957.962103] [<ffffffffc0f0cb00>] ? ptlrpc_register_service+0xe30/0xe30 [ptlrpc] [9798958.008436] [<ffffffffb34bae31>] kthread+0xd1/0xe0 [9798958.039672] [<ffffffffb34bad60>] ? insert_kthread_work+0x40/0x40 [9798958.078163] [<ffffffffb3b1f5f7>] ret_from_fork_nospec_begin+0x21/0x21 [9798958.119234] [<ffffffffb34bad60>] ? insert_kthread_work+0x40/0x40
{{}}
Could you please look into this one?