lustre/include/obd_support.h
@@ -271,10 +271,9 @@ extern char obd_jobid_var[];
 #define OBD_FAIL_OSD_OST_EA_FID_SET			0x197
 #define OBD_FAIL_OSD_NO_OI_ENTRY			0x198
 #define OBD_FAIL_OSD_INDEX_CRASH			0x199
-
 #define OBD_FAIL_OSD_TXN_START				0x19a
-
 #define OBD_FAIL_OSD_DUPLICATE_MAP			0x19b
+#define OBD_FAIL_OSD_REF_DEL				0x19c
 
 #define OBD_FAIL_OFD_SET_OID				0x1e0
 
